<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/innerToolbar"
            style="@style/Widget.MaterialComponents.ActionBar.Primary"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/white"
            app:navigationIcon="@drawable/ic_round_keyboard_arrow_left_24"
            app:title="Settings" />
    </com.google.android.material.appbar.AppBarLayout>

    <FrameLayout
        android:id="@+id/about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/provided_by"
            android:textStyle="bold" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/provider_description"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="190dp"
            android:layout_height="100dp"
            android:layout_gravity="end"
            android:contentDescription="@string/provider_description"
            android:src="@drawable/logo" />

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="4dp"
        android:background="@drawable/favorite_list_style"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/about">

        <FrameLayout
            android:id="@+id/one"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.textview.MaterialTextView
                style="@style/TVStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="16dp"
                android:text="@string/temperature"
                android:textSize="18sp" />

            <com.google.android.material.button.MaterialButtonToggleGroup
                android:id="@+id/groupTemp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="4dp"
                app:selectionRequired="true"
                app:singleSelection="true">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/degreeC"
                    style="?attr/materialButtonOutlinedStyle"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto"
                    android:gravity="center"
                    android:text="@string/c"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textSize="16sp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/degreeF"
                    style="?attr/materialButtonOutlinedStyle"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto"
                    android:gravity="center"
                    android:text="@string/f"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textSize="16sp" />
            </com.google.android.material.button.MaterialButtonToggleGroup>
        </FrameLayout>

        <FrameLayout
            android:id="@+id/two"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.textview.MaterialTextView
                style="@style/TVStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="16dp"
                android:text="@string/wind_speed"
                android:textSize="18sp" />

            <com.google.android.material.button.MaterialButtonToggleGroup
                android:id="@+id/groupWindSpeed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="4dp"
                app:selectionRequired="true"
                app:singleSelection="true">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/m_s"
                    style="?attr/materialButtonOutlinedStyle"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto"
                    android:gravity="center"
                    android:text="@string/m_s"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textSize="16sp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/km_h"
                    style="?attr/materialButtonOutlinedStyle"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto"
                    android:gravity="center"
                    android:text="@string/km_h"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textSize="16sp" />
            </com.google.android.material.button.MaterialButtonToggleGroup>
        </FrameLayout>

        <FrameLayout
            android:id="@+id/three"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.textview.MaterialTextView
                style="@style/TVStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="16dp"
                android:text="@string/pressure"
                android:textSize="18sp" />

            <com.google.android.material.button.MaterialButtonToggleGroup
                android:id="@+id/groupPressure"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="4dp"
                app:selectionRequired="true"
                app:singleSelection="true">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/h_pa"
                    style="?attr/materialButtonOutlinedStyle"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto"
                    android:gravity="center"
                    android:text="@string/hpa"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textSize="14sp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/mm_hg"
                    style="?attr/materialButtonOutlinedStyle"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto"
                    android:gravity="center"
                    android:text="@string/mmhg"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textSize="14sp" />
            </com.google.android.material.button.MaterialButtonToggleGroup>
        </FrameLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>